refactor(M2M_CLIENTS_PURPOSES_CATALOG_4): [QA-16648] risettate quantità di risorse create + rivisto step di pulizia